# colpali-embedding2tag-local

./: compose.yml
.docker/: nvidia-cuda-12.4.1-ubuntu22.04.Dockerfile
workspace/: pyproject.toml  run_rvlcdip.py
