[project]
name = "tml-workspace"
version = "0.1.0"
description = "TMLlab research workspace (CUDA / MPS / CPU)"
requires-python = ">=3.12, <3.13"
dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "torchaudio>=2.6.0",
    "tensorflow==2.18",
    "transformers>=4.45.0",
    "datasets>=2.18.0,<3.0.0",
    "pillow>=10.0.0",
    "psutil>=5.9.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "huggingface-hub>=0.23.0",
    "accelerate>=0.26.0",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[dependency-groups]
dev = ["ruff"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]
torchaudio = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]
